@startuml

title __TAB's Class Diagram__\n

  namespace com.example.common {
    namespace tab {
      class com.example.common.tab.HiFragmentTabView {
          - currentPosition : int
          + HiFragmentTabView()
          + HiFragmentTabView()
          + HiFragmentTabView()
          + HiFragmentTabView()
          + getAdapter()
          + getCurrentFragment()
          + getCurrentItem()
          + setAdapter()
          + setCurrentItem()
      }
    }
  }
  

  namespace com.example.common {
    namespace tab {
      class com.example.common.tab.HiTabViewAdapter {
          - mCurrentFragment : Fragment
          - mFragmentManager : FragmentManager
          - mInfoList : List<HiTabBottomInfo<?>>
          + HiTabViewAdapter()
          + getCount()
          + getCurrentFragment()
          + getItem()
          + instantiateItem()
      }
    }
  }
  

  com.example.common.tab.HiFragmentTabView -up-|> android.widget.FrameLayout
  com.example.common.tab.HiFragmentTabView o-- com.example.common.tab.HiTabViewAdapter : mAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
